# project-context-skill

./: .gitignore  AGENTS.md  README.md  devbox.json
.agents/skills/project-context/: LICENSE  SKILL.md
.agents/skills/project-context/agents/: openai.yaml
.agents/skills/reconstruct-project-context/: SKILL.md
.agents/skills/reconstruct-project-context/references/: qualification.md
.github/workflows/: release.yml
.project-context/: events.jsonl  model.yaml
.project-context/schemas/: model.schema.json
cli/: Cargo.toml
cli/.project-context/: model.yaml
cli/.project-context/schemas/: event.schema.json
cli/src/: context.rs  doctor.rs  main.rs  output.rs  store.rs
cli/src/schemas/: event-v1.json  event-v2.json  model-v1.json  model-v2.json
cli/tests/: cli.rs
cli/tests/fixtures/duplicate-id/.project-context/: events.jsonl  model.yaml
cli/tests/fixtures/supersession-cycle/.project-context/: events.jsonl  model.yaml
cli/tests/fixtures/valid/.project-context/: events.jsonl  model.yaml
project-context/: SKILL.md
project-context/assets/init/: event.schema.json  model.schema.json  model.yaml
reconstruct-project-context/: SKILL.md
reconstruct-project-context/agents/: openai.yaml
reconstruct-project-context/references/: qualification.md  sources.md
reconstruct-project-context/scripts/: inventory_local_history.py
tests/: test-bootstrap.sh  test-installer-package.sh  test-installer.sh  test-package.sh  test-reconstruction.sh  test-skill-validator.sh  test-update.sh
tests/fixtures/: document-paths.json
(+2 files in other folders)
