[package]
name = "project-context"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Repository-local durable context for coding agents"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
jsonschema = { version = "0.48", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
time = { version = "0.3", features = ["macros", "parsing"] }
xattr = "1.6"

[dev-dependencies]
tempfile = "3.20"
